tests/ui/traits/issue-71136.stderr
error[E0277]: the trait bound `Foo: Clone` is not satisfied
  --> $DIR/issue-71136.rs:5:5
   |
LL |     the_foos: Vec<Foo>,
   |     ^^^^^^^^ the trait `Clone` is not implemented for `Foo`
   |
   = note: required for `Vec<Foo>` to implement `Clone`
help: consider annotating `Foo` with `#[derive(Clone)]`
   |
LL | #[derive(Clone)]
   |

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
